# GenAI

MCP/mcp_github/: main.py  pyproject.toml
MCP/mcp_github/server/: client.py  github.json  github.py
MCP/mcp_research/: Server.ipynb  Server.py  client.py  pyproject.toml
MCP/mcp_research/Papers/manifolds/: papers_info.json
MCP/mcp_research/Papers/space_manifolds/: papers_info.json
MCP/mcp_weather/: pyproject.toml
MCP/mcp_weather/server/: client.py  weather.json  weather.py
