[project]
name = "mcp_research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "langchain-huggingface>=0.3.1",
    "mcp>=1.13.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
